--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
-Django
-Pillow
-pylint
-python-decouple
+asgiref==3.6.0
+astroid==2.14.1
+dill==0.3.6
+Django==4.1.6
+django-crispy-forms==1.14.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+Pillow==9.4.0
+platformdirs==3.0.0
+pylint==2.16.1
+python-decouple==3.7
+six==1.16.0
+sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.4.0
+wrapt==1.14.1
