--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.7.2
-astroid==2.15.5
+astroid==2.15.6
 dill==0.3.6
+Django==4.2.3
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
-platformdirs==3.8.0
+platformdirs==3.8.1
 pylint==2.17.4
 python-decouple==3.8
 six==1.16.0
